fixing the bottom part overflow from right

--- a/styles/divider.css
+++ b/styles/divider.css
@@ -25,12 +25,23 @@
     box-shadow: var(--my-basic-shadow);
 }
 
+
+.vertical-divider-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 1em;
+    width: 1em;
+}
+
 .vertical-divider {
     margin: .1em 0;
     background-color: white;
     color: white;
-    height: 100%;
+    height: 1em;
     width: 1px;
+
     border-radius: 5px;
     box-shadow: var(--my-basic-shadow);
 }
